--- a/wp-content/themes/dobele/package.json
+++ b/wp-content/themes/dobele/package.json
@@ -1,4 +1,4 @@
-{
+{ 
   "name": "dobele",
   "version": "1.0.0",
   "description": "",
@@ -24,6 +24,6 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.3.1",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
   }
 }
